source/styles/blocks/control.scss
.control {
  position: relative;
  display: flex;
  align-items: center;
  gap: 10px;
  min-height: 24px;
  font-size: 16px;
  line-height: 24px;
}

.control__input {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  clip-path: inset(100%);
  appearance: none;
}

.control__mark {
  position: relative;
  flex: 0 0 24px;
  width: 24px;
  height: 24px;
  background-color: $color-base-white;
  border: 2px solid $color-base-grey;
  border-radius: 50%;
}

.control__input:checked + .control__mark {
  border-color: $color-base-primary;
}

.control__input:focus-visible + .control__mark {
  outline: 2px solid $color-primary-lighter;
  outline-offset: 2px;
}

.control__input:checked + .control__mark::before {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 12px;
  height: 12px;
  transform: translate(-50%, -50%);
  background-color: $color-base-primary;
  border-radius: 50%;
  content: "";
}

.control--checkbox .control__mark {
  flex: 0 0 42px;
  width: 42px;
  height: 24px;
  border: 0;
  background-color: $color-base-grey;
  border-radius: 12px;
}

.control--checkbox .control__mark::before {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  background-color: $color-base-white;
  border-radius: 50%;
  content: "";
}

.control--checkbox .control__input:checked + .control__mark::before {
  left: 20px;
  width: 20px;
  height: 20px;
  background-color: $color-base-white;
}

.control--checkbox .control__input:checked + .control__mark {
  background-color: $color-base-primary;
}

.control__input:disabled + .control__mark {
  background-color: $color-base-light-grey;
  border-color: $color-base-light-grey;
}

.control__input:disabled + .control__mark::before {
  background-color: $color-base-grey;
}

.control__input:disabled ~ .control__label {
  color: $color-base-grey;
}

